# payment-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: deps.py  routes.py  schemas.py  services.py
app/core/: config.py  logging.py
app/domain/: enums.py  exceptions.py
app/infrastructure/broker/: declare.py  publisher.py  setup.py  topology.py
app/infrastructure/db/: models.py  repositories.py  session.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/migrations/versions/: 0001_initial.py  0002_webhook_delivery.py
app/infrastructure/webhook/: client.py
app/workers/: consumer.py  outbox_relay.py  outbox_relay_app.py  processor.py  webhook_worker.py
scripts/: start-api.sh
tests/: conftest.py  test_api_payments.py  test_broker.py  test_idempotency_hash.py  test_outbox.py  test_payment_service.py
